--- a/Client/package.json
+++ b/Client/package.json
@@ -9,12 +9,14 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-
   },
   "author": "OrionC11",
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.7.14",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.19",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,8 +31,5 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "vite": "^5.1.6"
-
-
-}
-
+  }
 }
