--- a/Client/package.json
+++ b/Client/package.json
@@ -18,6 +18,8 @@
     "@emotion/styled": "^11.11.5",
     "@fullcalendar/core": "^6.1.14",
     "@fullcalendar/daygrid": "^6.1.14",
+    "@fullcalendar/interaction": "^6.1.14",
+    "@fullcalendar/react": "^6.1.14",
     "@mui/material": "^5.15.19",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
