--- a/Client/package.json
+++ b/Client/package.json
@@ -21,6 +21,7 @@
     "@fullcalendar/interaction": "^6.1.14",
     "@fullcalendar/react": "^6.1.14",
     "@mui/material": "^5.15.19",
+    "jwt-decode": "^3.1.2",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
