--- a/Server/package.json
+++ b/Server/package.json
@@ -8,13 +8,13 @@
     "start": "node server.js",
     "seed": "node config/seeds.js",
     "watch": "nodemon server.js"
-
   },
   "author": "OrionC11",
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.7.1",
     "bcrypt": "^4.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.17.2",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
@@ -23,5 +23,4 @@
   "devDependencies": {
     "nodemon": "^2.0.6"
   }
-
 }
