--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
     "build": "cd client && npm run build",
-    "render-build":"npm install && npm run build"
+    "render-build":"npm install"
   },
   "repository": {
     "type": "git",
