--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A task tracking application for use by large or small scale companies. Allows you to add and track employee tasks.",
   "main": "server/server.js",
   "engines": {
-    "node": "14.17.0"
+    "node": "20.11.1",
+    "npm": "10.2.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
