--- a/Client/package.json
+++ b/Client/package.json
@@ -23,9 +23,10 @@
     "@mui/material": "^5.15.19",
     "graphql": "^16.6.0",
     "jwt-decode": "^3.1.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router": "^6.23.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
