--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A task tracking application for use by large or small scale companies. Allows you to add and track employee tasks.",
   "main": "server/server.js",
   "engines": {
-    "node": "20.11.1",
-    "npm": "10.8.1"
+    "node": "16.20.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,7 +13,7 @@
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
     "build": "cd client && npm run build",
-    "render-build":"npm install && npm run build"
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -30,6 +29,7 @@
     "concurrently": "^5.3.0"
   },
   "dependencies": {
+    "mongodb": "^6.7.0",
     "react-router-dom": "^6.23.1"
   }
 }
