--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"cd server && npm run watch\" \"cd ./client && npm run dev\"",
+    "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd ./client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
