--- a/Server/package.json
+++ b/Server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.2",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^6.7.0",
     "mongoose": "^8.0.0"
   },
   "devDependencies": {
