--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"cd Server && npm run watch\" \"cd ./Client && npm run dev\"",
-    "develop": "concurrently \"cd Server && npm run watch\" \"cd ./Client && npm run dev\"",
-    "install": "cd Server && npm i && cd ../Client && npm i",
-    "seed": "cd Server && npm run seed",
-    "build": "cd Client && npm run build",
+    "start": "concurrently \"cd server && npm run watch\" \"cd ./client && npm run dev\"",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd ./client && npm run dev\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed",
+    "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
   "repository": {
